apps/cdio/cdio.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cdio
  namespace: cdio
  annotations:
  labels:
    app: cdio
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cdio
  serviceName: cdio
  template:
    metadata:
      labels:
        app: cdio
    spec:
      containers:
      - name: cdio
        image: dgtlmoon/changedetection.io:0.60.8@sha256:34df3680db1cbffc45ac1e9c1514bc0507dd0c5b5fde47d1992fe6f14a7b40e4
        imagePullPolicy: IfNotPresent
        resources: {}
        volumeMounts:
        - mountPath: /datastore
          name: data
      - name: sockpuppet
        image: dgtlmoon/sockpuppetbrowser:latest@sha256:1d8f72d2ce2085faed4232e5ae1e65c02efe5b831a18e127829b267c260b4fb2
        imagePullPolicy: Always
        securityContext:
          capabilities:
            add: ["CAP_SYS_RESOURCE"]
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "freenas-iscsi-csi"
        resources:
          requests:
            storage: 20Gi
