apps/cdio/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdio
  namespace: cdio
spec:
  ingressClassName: tailscale
  rules:
    - http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: "cdio"
              port:
                number: 80
  tls:
    - hosts:
        - cdio
